@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Tentative fix for bug #1936178: Trying to remove removed object causes server crash.
+ random_maps/treasure.c: update doorlist to process when removing a door.
+Nicolas Weeger 2008-05-08
+
 Tentative fix for bug #1956908: bolt wc can overflow.
  server/player.c: cap modifiers so we don't overflow wc.
 Nicolas Weeger 2008-05-07
